app/assets/stylesheets/styles.css.scss
/*
 * @font-face declarations
 */
/*@font-face {
  font-family: 'AdelleBasic';
  src: font-url('adellebasic_bold.eot');
  src: font-url('adellebasic_bold.eot?#iefix') format('embedded-opentype'),
       font-url('adellebasic_bold.woff') format('woff'),
       font-url('adellebasic_bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'AdelleBasic';
  src: font-url('adellebasic_bolditalic.eot');
  src: font-url('adellebasic_bolditalic.eot?#iefix') format('embedded-opentype'),
       font-url('adellebasic_bolditalic.woff') format('woff'),
       font-url('adellebasic_bolditalic.ttf') format('truetype');
  font-weight: bold;
  font-style: italic;
}*/

@font-face {
    font-family: 'Adelle SemiBold';
    src: font_url('AdelleSemiBold.eot');
    src: font_url('AdelleSemiBold.eot?') format('embedded-opentype'),
    font_url('AdelleSemiBold.woff') format('woff'),
    font_url('AdelleSemiBold.ttf') format('opentype');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: 'Adelle SemiBold';
    src: font_url('AdelleSemiBoldItalic.eot');
    src: font_url('AdelleSemiBoldItalic.eot?') format('embedded-opentype'),
    font_url('AdelleSemiBoldItalic.woff') format('woff'),
    font_url('AdelleSemiBoldItalic.ttf') format('opentype');
    font-weight: bold;
    font-style: italic;
}

* {
  text-rendering: optimizeLegibility;
}

html, body {
  height: 100%;
}

body {
  font: 14px/1.5em $body-fontstack;
  color: $body-text-color;
}

h1, h2, h3,  h4, h5, h6 {
  font-family: $heading-fontstack;
  line-height: 1.2em;
  margin-bottom: 0.7em;
  margin-top: 2em;
}

h1 {
  font-size: 28px;
}

h2 {
  font-size: 18px;
}

h3 {
  font-size: 16px;
}

h4, h5, h6 {
  font-size: 14px;
}

.page-title {
  margin-top: 0px;
}

p {
  margin: 0.8em 0;
}

p.first-paragraph {
  margin-top: 0;
}

p.last-paragraph {
  margin-bottom: 0;
}

a {
  color: $link-color;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.plain-link {
  color: $body-text-color;
}

.anchor {
  color: $body-text-color;
}

.anchor:hover {
  text-decoration: none;
}

ul, ol {
  margin: 0.8em 0 0.8em 1.8em;
  list-style-position: outside;
}

ul.no-indentation, ol.no-indentation {
  margin-left: 0;
  list-style-position: inside;
}

ul {
  list-style-type: square;
}

ul.undecorated-list {
  list-style-type: none;
  margin: 0;
}

img {
  @include border-box;
}

img.border {
  padding: 1px;
  border: 1px solid #ccc;
}

.float-overflow {
  overflow: hidden;
  clear: both;
}

blockquote {
  background: $background-light;
  padding: 0em 1.5em;
  overflow: hidden;
}

/**
 * General form elements
 */

form .field, form .actions {
  margin: 1em 0;
}

form .actions input {
  margin-right: 1em;
}

label {
  font-family: $heading-fontstack;
  font-size: 15px;
  font-weight: bold;
  margin-bottom: 0.5em;
  display: block;
}

label.inline {
  display: inline;
  font-size: 14px;
  font-family: $body-fontstack;
  font-weight: normal;
}

label.required:after {
  content: ' *';
  color: red;
}

input.text, input.submit, textarea, .simple_captcha input {
  font-family: $body-fontstack;
  font-size: 15px;
  padding: 7px 6px 6px;
  @include border-box;
}

input.text, textarea {
  width: 100%;
}

input.text, .simple_captcha input {
  line-height: 1em;
  border: 1px #bbb solid;
  @include box-shadow(inset, 0, 0, 2px, #ccc);
}

textarea {
  resize: none;
  border: 1px #bbb solid;
  @include box-shadow(inset, 0, 0, 2px, #ccc);
}

form .description {
  font-size: 12px;
  margin-top: 2px;
}

form .help {
  background: $background-light image_url('help.png') no-repeat 15px 15px;
  padding: 10px 10px 10px 50px;
}

fieldset {
  margin-bottom: 40px;
}

form .help {
  margin-top: 20px;
}

form .first-help {
  margin-top: 0;
}

.simple_captcha {
  input {
    width: 150px;
  }
  img {
    vertical-align: middle;
    margin-right: 1em;
    margin-top: -2px;
  }
}

form.content, form.user {
  .field, .actions {
    background: $background-light;
    padding: 20px 20px;
    margin: 0;
  }

  label {
    font-size: 16px;
    margin-bottom: 0.7em;
  }
}

/**
 * Form error messages
 */
#error_explanation h3 {
  background: image_url('error.png') no-repeat;
  padding-left: 30px;
  margin: 0;
}

#error_explanation ul {
  margin-top: 0;
}

.field_with_errors label {
  background: image_url('error-small.png') no-repeat 0 4px;
  padding-left: 25px;
}

/**
 * Buttons
 */
input.submit, .button {
  background: image_url("button-bg-sprite.png") repeat-x;
  display: inline-block;
  text-align: center;
  color: #fff;
  border-radius: 2px;
  border: 1px;
  border-style: solid;
  border-color: $link-color;
  border-top-color: #5da020;
  border-left-color: #58971e;
  border-right-color: #58971e;
  border-bottom-color: #487b18;
  padding: 0;
}

input.submit:hover, .button:hover {
  background-position: 0 -60px;
  text-decoration: none;
}

input.submit {
  font-size: 17px;
  line-height: 18px;
  padding: 3px 12px;
}

.button-large {
  height: 30px;
  font-size: 20px;
  line-height: 30px;
}

img.handle {
  cursor: move;
  padding-right: 1em;
  padding-top: 0.2em;
}

/*
 * Search fields
 */
.search {
  position: relative;
}

.search input.text {
  width: 100%;
  @include border-box;
  border-radius: 2px;
  padding-right: 30px;
}

.dark-search input.text {
  @include box-shadow-none;
  background: $dark-brown;
  border: 1px solid #5D6457;
  color: #6C7466;
}

.dark-search input.text::-webkit-input-placeholder {
  color: #6C7466;
}

.dark-search input.text:-moz-input-placeholder {
  color: #6C7466;
}

.search input.submit {
  border: 0;
  text-indent: -999px;
  overflow: hidden;
  position: absolute;
  right: 3px;
  top: 10px;
  width: 20px;
  height: 20px;
  background: transparent image_url("search.png") no-repeat;
}

/**
 * Header
 */

#header {
  background: image_url("header-bg.png") repeat-x;
  height: 70px;
  margin: 0 -40px; /* Cancel the padding of the container */
  padding: 0 40px; /* ...but re-add it for the internal elements */

  .first-row {
    padding-bottom: 300px;
    margin-bottom: -320px;
  }

  #logo {
    margin-left: -7px; /* Compensate for background shadow */
  }

  .search {
    margin-top: 7px;
  }

  #publish {
    position: relative;

    a {
      margin-top: 8px;
      display: block;
    }

    ul {
      position: absolute;
      background: image_url("publish-triangle.png") no-repeat 180px 5px;
      width: 300px;
      right: 0;
      z-index: 100;
      padding-top: 25px;
      display: none;

      li a {
        background: $link-color;
        color: #fff;
        padding: 15px 20px;
        margin: 0;
        font-size: 15px;
        display: block;
        text-decoration: none;
        border-right: 10px solid #fff;
        margin-right: -10px;
        -webkit-transition: background 0.3s;

        h5 {
          margin-top: 0;
          margin-bottom: 0.4em;
        }

        p {
          margin: 0;
        }
      }

      li a:hover {
        background: $dark-green;
      }
    }
  }

  .second-row {
    text-align: right;
    margin-top: -20px;
    height: 30px;
    font-size: 15px;
    font-weight: bold;
  }

  .second-row .last {
    min-width: 13.45%; /* twocol width */
    width: auto;
  }
}

.no-js #header #publish:hover ul {
  display: block;
}

#main {
  margin-top: 40px;
  min-height: 85%;
}

/**
 * Notice
 */

#notice {
  background: $background-light image_url('notice.png') no-repeat 15px 10px;
  padding: 10px;
  padding-left: 40px;
  border: 1px solid $link-color;
  font-size: 16px;
  margin: 0 0 2em 0;
}

/**
 * Pagers
 */
#pager {
  display: block;
  margin: 2em 0;
  padding: 3px 10px;
  font-size: 15px;
  background: $background-light;
  text-align: center;

  span {
    background: image_url("pager.png") no-repeat 0 4px;
    padding-left: 30px;
  }
}

.pagination {
  display: block;
  margin: 2em 0;
  padding: 3px 10px;
  font-size: 15px;
  background: $background-light;
  text-align: center;

  span {
    padding: 0 0.1em;
  }

  .first, .prev, .next, .last {
    padding: 0 .5em;
  }
}

/**
 * Sticky footer
 */
.page-wrapper {
  min-height: 100%;
  margin-bottom: -220px;
}

#footer-push {
  height: 240px + 30px; /* 30px margin */
}

#footer {
  height: 170px;
}

/**
 * Footer
 */

#footer {
  background: image_url("footer-bg.png") repeat-x;
  margin: 0 -40px; /* Cancel the padding of the container */
  padding: 35px 40px 35px; /* ...but re-add it for the internal elements */
  color: #fff;
}

#footer h3 {
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 8px;
  margin-top: 0;
}

#footer a {
  color: #fff;
}

#footer li {
  margin: 3px 0;
}

#footer .threecol {
  border-right: 1px solid #353C2E;
  min-height: 170px;
}

#footer .last {
  border: none;
}

/* First column */
#footer .first img {
  float: left;
  margin-right: 1em;
}

#footer .search {
  clear: both;
  margin-top: 1.5em;
}

/* Last column */
#footer .last a {
  display: block;
  padding-left: 25px;
}

#footer .email {
  background: image_url("email.png") no-repeat left 5px;
}

#footer .twitter {
  background: image_url("twitter.png") no-repeat left 2px;
}

#footer .facebook {
  background: image_url("facebook.png") no-repeat left 2px;
}

